Fix spacing issue

--- a/css/resume.css
+++ b/css/resume.css
@@ -87,10 +87,16 @@ h2 {
 
 section.resume-section {
   border-bottom: 1px solid #dee2e6;
-  padding-top: 50rem !important;
-  padding-bottom: 50rem !important; }
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important; }
   section.resume-section .resume-item .resume-date {
     min-width: none; }
+
+@media (min-width: 768px) {
+  section.resume-section {
+    min-height: 100vh; }
+    section.resume-section .resume-item .resume-date {
+      min-width: 18rem; } }
 
 @media (min-width: 992px) {
   section.resume-section {
